# sqlmodel

./: .gitignore  README.md  alembic.ini  app_routes.py  pyproject.toml  req.txt  requirements.txt  runserver.py
api/: courses.py  generic.py  users.py
api/models/: user_model.py
app/: main.py  sql_config.py
app/alembic/: env.py
app/alembic/versions/: 023b8afe1c1b_.py  91c26c74feee_moving_is_active_to_user_table.py
app/api/: courses.py  courses_router.py  generic_router.py  sections.py  sections_router.py  users.py  users_router.py
app/api/models/: user_model.py
app/api/utils/: courses_crud.py  users.py  users_crud.py
app/crud/: hero_crud.py
app/db/: db_setup.py
app/db/models/: course.py  course_model.py  mixins_model.py  user.py  user_model.py
app/models/: hero.py
app/pydantic_schemas/: user_schema.py
